created all of the text boxes

--- a/app/index.html
+++ b/app/index.html
@@ -3,13 +3,19 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Cool Project</title>
+    <title>Form Builder</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <div class="container">
-      <p>Welcome to your life.</p>
+      <h1>Sign Up For My Web App</h1>
+      <form class="submit-form">
+
+      </form>
+      <nav>
+        <button class="submit">Submit Form</button>
+      </nav>
     </div>
     <script src="js/bundle.js"></script>
   </body>
