--- a/app/index.html
+++ b/app/index.html
@@ -5,17 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Builder</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <div class="container">
       <h1>Sign Up For My Web App</h1>
       <form class="submit-form">
-
+        <div class="form-area">
+        </div>
+        <nav>
+          <button class="submit">Submit Form</button>
+        </nav>
       </form>
-      <nav>
-        <button class="submit">Submit Form</button>
-      </nav>
     </div>
     <script src="js/bundle.js"></script>
   </body>
